--- a/build.gradle
+++ b/build.gradle
@@ -217,6 +217,7 @@ def sonarExclusions = [
   '**/uk/gov/hmcts/sptribs/notification/GetAllTemplatesFromNotify.java',
   '**/uk/gov/hmcts/sptribs/ciccase/model/UserRolesForAccessProfiles.java',
   '**/uk/gov/hmcts/sptribs/common/config/**'
+  '**/uk/gov/hmcts/sptribs/common/servicebus/**',
 ]
 
 sonarqube {
