--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -2,6 +2,8 @@ java:
   environment:
     WA_FEATURE_ENABLED: true
     SPRING_JMS_SERVICEBUS_ENABLED: true
+    AZURE_SERVICE_BUS_TOPIC_NAME: ${SERVICE_NAME}-asb-ccd-case-events
+    AZURE_SERVICE_BUS_SUBSCRIPTION_NAME: ${SERVICE_NAME}-asb-ccd-case-events
   secrets:
     AZURE_SERVICE_BUS_CONNECTION_STRING:
       secretRef: sptribs-sb-preview
