--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -48,7 +48,8 @@ azure:
     instrumentation-key: ${app-insights-instrumentation-key:00000000-0000-0000-0000-000000000000}
   servicebus:
     ccd-case-events:
-      topic-name: ccd-case-events
+      topic-name: ${AZURE_SERVICE_BUS_TOPIC_NAME:sptribs-asb-ccd-case-events}
+      subscription-name: ${AZURE_SERVICE_BUS_SUBSCRIPTION_NAME:sptribs-asb-ccd-case-events}
 
 uk:
   gov:
