--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -10,11 +10,10 @@ java:
     CASE_DOCUMENT_AM_BASEURL: http://${SERVICE_NAME}-ccd-case-document-am-api
     BUNDLING_API_URL: https://em-ccdorc-${SERVICE_FQDN}
     CITIZEN_UPDATE_CASE_STATE_ENABLED: true
-    # TODO: Fix this madness
-#    POSTGRES_HOST: '{{ tpl .Values.global.postgresHostname $}}'
-#    POSTGRES_NAME: "{{ .Values.global.databaseNamePrefix }}sptribs-case-api"
-#    POSTGRES_USERNAME: ${SPTRIBS_POSTGRES_USERNAME_PREVIEW}
-#    POSTGRES_CONNECTION_OPTIONS: ""
+    DB_NAME: "{{ .Values.global.databaseNamePrefix }}sptribs"
+    DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
+    DB_USER_NAME: "{{ .Values.global.postgresUsername}}"
+    ELASTIC_SEARCH_HOSTS: "http://{{ .Release.Name }}-es-master:9200"
 
   keyVaults:
     sptribs:
