--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,10 +26,9 @@ spring:
       max-file-size: 500MB
       max-request-size: 500MB
   datasource:
-    url: jdbc:postgresql://localhost:6432/sptribs
-    username: postgres
-    password: postgres
-
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:pcs}${DB_OPTIONS:}
+    username: ${DB_USER_NAME}
+    password: ${DB_PASSWORD}
 logging:
   level:
     root: info
