--- a/charts/sptribs-case-api/values.preview.template.yaml
+++ b/charts/sptribs-case-api/values.preview.template.yaml
@@ -14,7 +14,14 @@ java:
     DB_HOST: '{{ tpl .Values.global.postgresHostname $}}'
     DB_USER_NAME: "{{ .Values.global.postgresUsername}}"
     ELASTIC_SEARCH_HOSTS: "http://{{ .Release.Name }}-es-master:9200"
-
+  postgresql:
+    enabled: false
+    primary:
+      initdb:
+        scripts:
+          init.sql: |-
+            CREATE DATABASE "data-store" WITH OWNER = javapostgres ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
+            CREATE DATABASE "definition-store" WITH OWNER = javapostgres ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
   keyVaults:
     sptribs:
       secrets:
@@ -35,7 +42,7 @@ java:
         - name: launchdarkly-sdk-key
           alias: LAUNCH_DARKLY_SDK_KEY
   secrets:
-    POSTGRES_PASSWORD:
+    DB_PASSWORD:
       secretRef: postgres
       key: PASSWORD
       disabled: false
