DTSSTCI-1355 Run tests in parallel, move to profile based spring config

--- a/build.gradle
+++ b/build.gradle
@@ -106,9 +106,11 @@ tasks.withType(JavaExec).configureEach {
 
 tasks.withType(Test) {
   useJUnitPlatform()
+  maxParallelForks = Math.floorDiv(Runtime.runtime.availableProcessors(), 2)
 
   testLogging {
     exceptionFormat = 'full'
+    events "PASSED", "FAILED", "SKIPPED"
   }
 }
 
@@ -119,14 +121,13 @@ test {
 }
 
 tasks.register('functional', Test) {
-  if (System.getenv('WA_FUNCTIONAL_TESTS_ENABLED') == 'true') {
-    maxParallelForks = Runtime.runtime.availableProcessors()
-  }
   description = "Runs functional tests"
   group = "Verification"
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
   jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED', '--add-opens=java.base/java.util=ALL-UNNAMED']
+  environment 'SPRING_PROFILES_ACTIVE', 'functional'
+  include "**/*FunctionalTest.class"
 }
 
 task integration(type: Test) {
@@ -135,6 +136,8 @@ task integration(type: Test) {
   testClassesDirs = sourceSets.integrationTest.output.classesDirs
   classpath = sourceSets.integrationTest.runtimeClasspath
   failFast = true
+  environment 'SPRING_PROFILES_ACTIVE', 'integration'
+  include "**/*IT.class"
 }
 
 // Invoked from CftLibConfig when booting with CCD.
