--- a/src/functionalTest/resources/application-functional.yaml
+++ b/src/functionalTest/resources/application-functional.yaml
@@ -1,3 +1,32 @@
+
+idam:
+  api:
+    url: ${IDAM_API_BASEURL:https://idam-api.aat.platform.hmcts.net}
+  s2s-auth:
+    url: ${TEST_S2S_URL:http://rpe-service-auth-provider-aat.service.core-compute-aat.internal}
+    secret: ${S2S_SECRET:dummy}
+    microservice: sptribs_case_api
+  solicitor:
+    username: ${IDAM_SOLICITOR_USERNAME:dummysolicitor@test.com}
+    password: ${IDAM_SOLICITOR_PASSWORD:dummy}
+  caseworker:
+    username: ${IDAM_CASEWORKER_USERNAME:dummycaseworker@test.com}
+    password: ${IDAM_CASEWORKER_PASSWORD:dummy}
+  waseniorcaseworker:
+    username: ${IDAM_WA_SENIOR_CASEWORKER_USERNAME:dummywaseniorcaseworker@test.com}
+    password: ${IDAM_WA_SENIOR_CASEWORKER_PASSWORD:dummy}
+    uid: ${WA_SENIOR_CASEWORKER_UID:dummy}
+  waregionalhearingcentreteamlead:
+    username: ${IDAM_WA_REGIONAL_HEARING_CENTRE_TEAM_LEAD_USERNAME:dummywaregionalhearingcentreteamlead@test.com}
+    password: ${IDAM_WA_REGIONAL_HEARING_CENTRE_TEAM_LEAD_PASSWORD:dummy}
+    uid: ${IDAM_WA_REGIONAL_HEARING_CENTRE_TEAM_LEAD_UID:dummy}
+  systemupdate:
+    username: ${IDAM_SYSTEM_UPDATE_USERNAME:dummysystemupdate@test.com}
+    password: ${IDAM_SYSTEM_UPDATE_PASSWORD:dummy}
+  citizen:
+    username: ${IDAM_CITIZEN_USERNAME:dummycitizen@test.com}
+    password: ${IDAM_CITIZEN_PASSWORD:dummy}
+
 feature:
   security-classification:
     enabled: false
