--- a/src/functionalTest/resources/application-functional.yaml
+++ b/src/functionalTest/resources/application-functional.yaml
@@ -26,6 +26,10 @@ idam:
   citizen:
     username: ${IDAM_CITIZEN_USERNAME:dummycitizen@test.com}
     password: ${IDAM_CITIZEN_PASSWORD:dummy}
+  client:
+    id: 'sptribs-case-api'
+    secret: ${OAUTH2_CLIENT_SECRET:dummy}
+    redirect_uri: ${IDAM_API_REDIRECT_URL:http://localhost:3001/oauth2/callback}
 
 feature:
   security-classification:
