--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -214,6 +214,8 @@ caseinfo:
         - CIC
 
 wa_task_monitor_api:
-  url: http://wa-task-monitor-aat.service.core-compute-aat.internal
+  url: ${TASK_MONITOR_API_URL:http://wa-task-monitor-aat.service.core-compute-aat.internal}
 wa_task_management_api:
-  url: http://wa-task-management-api-aat.service.core-compute-aat.internal
+  url: ${TASK_MANAGEMENT_API_URL:http://wa-task-management-api-aat.service.core-compute-aat.internal}
+role_assignment_mapping_api:
+  url: ${ROLE_ASSIGNMENT_API_URL:http://am-org-role-mapping-service-aat.service.core-compute-aat.internal}
