--- a/charts/sptribs-case-api/values.wa.preview.template.yaml
+++ b/charts/sptribs-case-api/values.wa.preview.template.yaml
@@ -4,10 +4,7 @@ java:
     SPRING_JMS_SERVICEBUS_ENABLED: true
     AZURE_SERVICE_BUS_TOPIC_NAME: ${SERVICE_NAME}-asb-ccd-case-events
     AZURE_SERVICE_BUS_SUBSCRIPTION_NAME: ${SERVICE_NAME}-asb-ccd-case-events
-  secrets:
-    AZURE_SERVICE_BUS_CONNECTION_STRING:
-      secretRef: sptribs-sb-preview
-      key: connectionString
+    AZURE_SERVICE_BUS_URL: sptribs-sb-preview.servicebus.windows.net
 
 servicebus:
   enabled: true
