turn off ES healthcheck

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,6 +13,9 @@ management:
       base-path: /
       exposure:
         include: health, info, prometheus
+  health:
+    elasticsearch:
+      enabled: false
 
 spring:
   application:
