--- a/src/functionalTest/resources/application-functional.yaml
+++ b/src/functionalTest/resources/application-functional.yaml
@@ -54,3 +54,12 @@ caseinfo:
         submitEvent: citizen-cic-submit-dss-application
       caseTypeOfApplication:
         - CIC
+logging:
+  level:
+    root: DEBUG
+    feign: DEBUG
+    uk:
+      gov:
+        hmcts:
+          sptribs:
+            wa: DEBUG
