[DTSSTCI-1293] Try to enable debug logging for FT

--- a/src/functionalTest/resources/application-functional.yaml
+++ b/src/functionalTest/resources/application-functional.yaml
@@ -58,8 +58,4 @@ logging:
   level:
     root: DEBUG
     feign: DEBUG
-    uk:
-      gov:
-        hmcts:
-          sptribs:
-            wa: DEBUG
+    uk.gov.hmcts.sptribs.wa: DEBUG
