[DTSSTCI-1293] Try to enable FT logging

--- a/build.gradle
+++ b/build.gradle
@@ -461,6 +461,12 @@ functional {
       }
     }
   }
+  testLogging {
+    showStandardStreams = true
+    showCauses = true
+    showExceptions = true
+    showStackTraces = true
+  }
 }
 
 generateTypeScript {
