--- a/build.gradle
+++ b/build.gradle
@@ -343,6 +343,7 @@ dependencies {
   implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.2.1'
   implementation 'org.camunda.bpm:camunda-external-task-client:7.23.0'
   implementation group: 'com.azure.spring', name: 'spring-cloud-azure-starter-servicebus-jms', version: '5.14.0'
+  implementation group: 'com.microsoft.azure', name: 'azure-servicebus-jms', version: '1.0.2'
 
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.9', classifier: 'all'
