[DTSSTCI-1293] Update s2s and lower logging level

--- a/build.gradle
+++ b/build.gradle
@@ -465,12 +465,12 @@ functional {
       }
     }
   }
-  testLogging {
-    showStandardStreams = true
-    showCauses = true
-    showExceptions = true
-    showStackTraces = true
-  }
+//  testLogging {
+//    showStandardStreams = true
+//    showCauses = true
+//    showExceptions = true
+//    showStackTraces = true
+//  }
 }
 
 generateTypeScript {
