[DTSSTCI-1293] Update FT to check for documents (#2196)
* [DTSSTCI-1293] Update FT to check for documents

* [DTSSTCI-1293] Use superuser for get document request

* [DTSSTCI-1293] Update test event reference

* [DTSSTCI-1293] Update logging for get documents

* [DTSSTCI-1293] Catch feign exception and upload new draft document

* [DTSSTCI-1293] update checkstyle

* [DTSSTCI-1293] Try to just upload a new draft document

* [DTSSTCI-1293] update checkstyle

* [DTSSTCI-1293] Update attempt for case document change

* [DTSSTCI-1293] Update caseDocumentClientApi access

* [DTSSTCI-1293] Update application-functional.yaml with CDAM url

* [DTSSTCI-1293] Remove get CDAM endpoint

* [DTSSTCI-1293] Fix checkstyleFT

* [DTSSTCI-1293] Update CASE_DATA_STORE_BASEURL in values.preview

* [DTSSTCI-1293] revert CASE_DATA_STORE_BASEURL in values.preview

* [DTSSTCI-1293] update ingress for cdam pod in values.preview

* [DTSSTCI-1293] try to use application-functional.yaml

* [DTSSTCI-1293] revert cdam ingress host change

* [DTSSTCI-1293] add logging class for CDAM

* [DTSSTCI-1293] Move debugger to main

* [DTSSTCI-1293] add dummy test

* [DTSSTCI-1293] fix checkstyle

* [DTSSTCI-1293] fix checkstyle

* [DTSSTCI-1293] try to update cdam url

* [DTSSTCI-1293] change log level to debug

* [DTSSTCI-1293] more logging

* [DTSSTCI-1293] Enable debug logging for FT

* [DTSSTCI-1293] Enable debug logging for FT

* [DTSSTCI-1293] Try to enable debug logging for FT

* [DTSSTCI-1293] Try to enable FT logging

* [DTSSTCI-1293] Try to use caseworker token

* [DTSSTCI-1293] try with http request auth string

* [DTSSTCI-1350] Update processing for FT

* [DTSSTCI-1293] Update active profiles to FT

* [DTSSTCI-1293] Update case api s2s token

* [DTSSTCI-1293] Update s2s and lower logging level

* [DTSSTCI-1293] Update task management s2s token

* [DTSSTCI-1293] Update ccd data s2s token usages

* [DTSSTCI-1293] Add check for draft order document in all affected WA tests

* [DTSSTCI-1293] fix typ

--- a/src/functionalTest/resources/application-functional.yaml
+++ b/src/functionalTest/resources/application-functional.yaml
@@ -1,7 +1,8 @@
 test-url: ${TEST_URL:http://localhost:4013}
 
 s2s:
-  name: ccd_data
+  name: sptribs_case_api
+  ccd_data_name: ccd_data
   task_management_name: wa_task_management_api
   access_management_name: am_role_assignment_service
 
