[DTSSTCI-1372] Update templates

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -73,14 +73,16 @@ uk:
           CONTACT_PARTIES_EMAIL: '02722db0-2f62-46f8-bdcc-46e891ab9a31'
           CONTACT_PARTIES_POST: '59ac1cb3-7c19-4993-945b-5cd331e12feb'
           TEST_TEMPLATE: '8d20e578-21cd-42b8-b27f-d13095e499d6'
-          CASE_ISSUED_CITIZEN_EMAIL: '3f25663d-9f3f-4330-afdb-3302399d29cf'
+#          CASE_ISSUED_CITIZEN_EMAIL: '3f25663d-9f3f-4330-afdb-3302399d29cf'
+          CASE_ISSUED_CITIZEN_EMAIL: '03a0bbaa-10ee-4304-a1b1-6fdf76a2fd69'
           CASE_ISSUED_CITIZEN_POST: 'eedc916f-088f-4653-99ed-b954e1dbd58d'
           CASE_ISSUED_RESPONDENT_EMAIL: '65df6386-bf56-498b-a877-e8fd896515d4'
           CASE_FINAL_DECISION_ISSUED_EMAIL: 'cd2236a1-048a-4561-8cab-288ca1be207e'
           CASE_FINAL_DECISION_ISSUED_POST: 'e968c49e-7510-4997-8f6f-8d13421d4f98'
           LISTING_UPDATED_CITIZEN_EMAIL: 'cede09ba-0575-4fc6-97d3-af5814753cd8'
           LISTING_UPDATED_CITIZEN_POST: '4c713489-bab5-4336-8452-0feb79deec65'
-          LISTING_CREATED_CITIZEN_EMAIL: '7583d36c-a03d-4ff8-ae45-206d2083caa2'
+#          LISTING_CREATED_CITIZEN_EMAIL: '7583d36c-a03d-4ff8-ae45-206d2083caa2'
+          LISTING_CREATED_CITIZEN_EMAIL: 'de4145f9-6b97-429f-afa2-7ccc50287523'
           LISTING_CREATED_CITIZEN_POST: '6b01b3fd-195e-4266-bfaf-ba028ccb4faa'
           CASE_CANCEL_HEARING_EMAIL: '56ea62fa-99d0-4341-ac03-4c69732035cc'
           CASE_CANCEL_HEARING_POST: '2663b564-c361-420b-a227-c470e6be0703'
