[DTSSTCI-1372] Update test templates for all emails

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -56,46 +56,66 @@ uk:
           tribunalOrganisation: 'CICA'
           tribunalEmail: CIC.enquiries@justice.gov.uk
         templatesCIC:
-          APPLICATION_NEW_ORDER_ISSUED: 'e451a469-e61d-4daf-95c3-e405448ececf'
+#          APPLICATION_NEW_ORDER_ISSUED: 'e451a469-e61d-4daf-95c3-e405448ececf'
 #          APPLICATION_RECEIVED: '5385bfc6-eb33-41f6-ad2b-590a4f427606'
-          APPLICATION_RECEIVED: '48ccf890-0550-48ca-8c52-fa68cec09947'
           APPLICATION_RECEIVED_CY: '2a434482-a070-457c-935d-12b49f2ac223'
-          CASE_REINSTATED_EMAIL: '1f41595f-1ab8-4e41-a240-026c61ecd852'
+#          CASE_REINSTATED_EMAIL: '1f41595f-1ab8-4e41-a240-026c61ecd852'
           CASE_REINSTATED_POST: '313e8992-8538-4485-a461-a244cc893bb3'
-          CASE_STAYED_EMAIL: 'ce3e6749-0400-47fd-aa96-33e348c860ad'
+#          CASE_STAYED_EMAIL: 'ce3e6749-0400-47fd-aa96-33e348c860ad'
           CASE_STAYED_POST: '23e1153e-c95c-4630-83eb-b0a272908e94'
-          CASE_UNLINKED_EMAIL: 'e19b7d26-2a5b-4275-ae40-f0309f6a30ff'
+#          CASE_UNLINKED_EMAIL: 'e19b7d26-2a5b-4275-ae40-f0309f6a30ff'
           CASE_UNLINKED_POST: 'c6703270-58d1-40bf-aca0-b968356fe952'
-          CASE_UNSTAYED_EMAIL: '46f69c0d-5114-4319-a8e0-dd2cad1ecac4'
+#          CASE_UNSTAYED_EMAIL: '46f69c0d-5114-4319-a8e0-dd2cad1ecac4'
           CASE_UNSTAYED_POST: 'a3c51a6e-b686-4ade-af32-fd62cc0d7451'
-          DECISION_ISSUED_EMAIL: 'e8edb80a-6924-4247-aa33-178c28251120'
+#          DECISION_ISSUED_EMAIL: 'e8edb80a-6924-4247-aa33-178c28251120'
           DECISION_ISSUED_POST: 'ae833f41-30da-48bb-8384-e832a244abb9'
-          CONTACT_PARTIES_EMAIL: '02722db0-2f62-46f8-bdcc-46e891ab9a31'
+#          CONTACT_PARTIES_EMAIL: '02722db0-2f62-46f8-bdcc-46e891ab9a31'
           CONTACT_PARTIES_POST: '59ac1cb3-7c19-4993-945b-5cd331e12feb'
-          TEST_TEMPLATE: '8d20e578-21cd-42b8-b27f-d13095e499d6'
+#          TEST_TEMPLATE: '8d20e578-21cd-42b8-b27f-d13095e499d6'
 #          CASE_ISSUED_CITIZEN_EMAIL: '3f25663d-9f3f-4330-afdb-3302399d29cf'
-          CASE_ISSUED_CITIZEN_EMAIL: '03a0bbaa-10ee-4304-a1b1-6fdf76a2fd69'
           CASE_ISSUED_CITIZEN_POST: 'eedc916f-088f-4653-99ed-b954e1dbd58d'
-          CASE_ISSUED_RESPONDENT_EMAIL: '65df6386-bf56-498b-a877-e8fd896515d4'
-          CASE_FINAL_DECISION_ISSUED_EMAIL: 'cd2236a1-048a-4561-8cab-288ca1be207e'
+#          CASE_ISSUED_RESPONDENT_EMAIL: '65df6386-bf56-498b-a877-e8fd896515d4'
+#          CASE_FINAL_DECISION_ISSUED_EMAIL: 'cd2236a1-048a-4561-8cab-288ca1be207e'
           CASE_FINAL_DECISION_ISSUED_POST: 'e968c49e-7510-4997-8f6f-8d13421d4f98'
-          LISTING_UPDATED_CITIZEN_EMAIL: 'cede09ba-0575-4fc6-97d3-af5814753cd8'
+#          LISTING_UPDATED_CITIZEN_EMAIL: 'cede09ba-0575-4fc6-97d3-af5814753cd8'
           LISTING_UPDATED_CITIZEN_POST: '4c713489-bab5-4336-8452-0feb79deec65'
 #          LISTING_CREATED_CITIZEN_EMAIL: '7583d36c-a03d-4ff8-ae45-206d2083caa2'
-          LISTING_CREATED_CITIZEN_EMAIL: 'de4145f9-6b97-429f-afa2-7ccc50287523'
           LISTING_CREATED_CITIZEN_POST: '6b01b3fd-195e-4266-bfaf-ba028ccb4faa'
-          CASE_CANCEL_HEARING_EMAIL: '56ea62fa-99d0-4341-ac03-4c69732035cc'
+#          CASE_CANCEL_HEARING_EMAIL: '56ea62fa-99d0-4341-ac03-4c69732035cc'
           CASE_CANCEL_HEARING_POST: '2663b564-c361-420b-a227-c470e6be0703'
-          HEARING_POSTPONED_EMAIL: '6c1ac2dc-cb6a-4e30-ba2f-3e658a57de0a'
+#          HEARING_POSTPONED_EMAIL: '6c1ac2dc-cb6a-4e30-ba2f-3e658a57de0a'
           HEARING_POSTPONED_POST: 'b8a6e858-6e2a-4222-a071-33348bb7fed6'
-          CASE_WITHDRAWN_EMAIL: '12985936-b067-4747-aae6-83a375e8295e'
+#          CASE_WITHDRAWN_EMAIL: '12985936-b067-4747-aae6-83a375e8295e'
           CASE_WITHDRAWN_POST: '54fe1990-2213-4bcb-9027-7b595cd9db12'
-          NEW_ORDER_ISSUED_EMAIL: 'e451a469-e61d-4daf-95c3-e405448ececf'
+#          NEW_ORDER_ISSUED_EMAIL: 'e451a469-e61d-4daf-95c3-e405448ececf'
           NEW_ORDER_ISSUED_POST: '797e62bd-a1d4-4a6a-b15d-ddd642d2b14b'
-          CASE_LINKED_EMAIL: '8af9efba-9861-4663-8305-0a378def1e46'
+#          CASE_LINKED_EMAIL: '8af9efba-9861-4663-8305-0a378def1e46'
           CASE_LINKED_POST: 'd69207af-ed64-4a60-b0a3-224d429d8b17'
-          UPDATE_RECEIVED_CITIZEN: 'ada9b776-877b-4bf4-9093-d814f9a18d43'
-          UPDATE_RECEIVED_CASEWORKER: '69034ba0-ed92-479f-822e-a4103cc1b6c6'
+#          UPDATE_RECEIVED_CITIZEN: 'ada9b776-877b-4bf4-9093-d814f9a18d43'
+#          UPDATE_RECEIVED_CASEWORKER: '69034ba0-ed92-479f-822e-a4103cc1b6c6'
+
+          APPLICATION_NEW_ORDER_ISSUED: 'b633258f-ca5d-40fb-b635-1eaf778072ec'
+          APPLICATION_RECEIVED: '48ccf890-0550-48ca-8c52-fa68cec09947'
+#          APPLICATION_RECEIVED_CY: ''
+          CASE_REINSTATED_EMAIL: '48e9f839-82e5-451c-a9bc-16269daf6561'
+          CASE_STAYED_EMAIL: '474266c4-f583-43b6-b464-3faad6567037'
+          CASE_UNLINKED_EMAIL: '950c25ec-f70b-4279-b6ab-1231ccfed74e'
+          CASE_UNSTAYED_EMAIL: '8bd8996a-51ec-4601-ae06-f9fdf38def97'
+          DECISION_ISSUED_EMAIL: '968c589d-f375-4a42-8c6f-3a7fb70f69de'
+          CONTACT_PARTIES_EMAIL: '1117ab2d-34d9-46d3-af7e-efcc380408c0'
+          TEST_TEMPLATE: 'c0ca771f-21f0-41e6-ab31-cd493358ce5c'
+          CASE_ISSUED_CITIZEN_EMAIL: '03a0bbaa-10ee-4304-a1b1-6fdf76a2fd69'
+          CASE_ISSUED_RESPONDENT_EMAIL: 'd90a4a2d-1406-48d3-a319-924cc8f67d5e'
+          CASE_FINAL_DECISION_ISSUED_EMAIL: '9e0a6a4f-96a0-4dbb-b6bd-ca31ee9b63b9'
+          LISTING_UPDATED_CITIZEN_EMAIL: '96fe38c3-95e1-4db4-8d4d-2723b39c7ef2'
+          LISTING_CREATED_CITIZEN_EMAIL: 'de4145f9-6b97-429f-afa2-7ccc50287523'
+          CASE_CANCEL_HEARING_EMAIL: '8e8bcf9f-aa29-4154-8030-c796429a29b6'
+          HEARING_POSTPONED_EMAIL: '607f1bdc-5276-472d-ae1c-e4e0f6c8d71c'
+          CASE_WITHDRAWN_EMAIL: '9b2df887-745d-49d6-ac98-02a081e642e1'
+          NEW_ORDER_ISSUED_EMAIL: 'fa64c351-da53-489f-aa87-6dc584fbf3c4'
+          CASE_LINKED_EMAIL: '14633cea-db23-4a44-a477-3f3b37202b72'
+          UPDATE_RECEIVED_CITIZEN: 'e4502ad3-df49-46d0-87da-3715d82df7d4'
+          UPDATE_RECEIVED_CASEWORKER: '714dbecf-256e-4a8e-a5ba-4b98eff2ef93'
 
         templates:
           english:
