[DTSSTCI-1372] Add updated welsh template

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -57,7 +57,7 @@ uk:
           tribunalEmail: CIC.enquiries@justice.gov.uk
         templatesCIC:
 #          APPLICATION_RECEIVED: '5385bfc6-eb33-41f6-ad2b-590a4f427606'
-          APPLICATION_RECEIVED_CY: '2a434482-a070-457c-935d-12b49f2ac223'
+#          APPLICATION_RECEIVED_CY: '2a434482-a070-457c-935d-12b49f2ac223'
 #          REINSTATED_EMAIL: '1f41595f-1ab8-4e41-a240-026c61ecd852'
           CASE_REINSTATED_POST: '313e8992-8538-4485-a461-a244cc893bb3'
 #          CASE_STAYED_EMAIL: 'ce3e6749-0400-47fd-aa96-33e348c860ad'
@@ -93,18 +93,19 @@ uk:
 #          UPDATE_RECEIVED: 'ada9b776-877b-4bf4-9093-d814f9a18d43'
 #          UPDATE_RECEIVED_CIC: '69034ba0-ed92-479f-822e-a4103cc1b6c6'
 
-          APPLICATION_RECEIVED: '48ccf890-0550-48ca-8c52-fa68cec09947' #
-          CASE_ISSUED_CITIZEN_EMAIL: '03a0bbaa-10ee-4304-a1b1-6fdf76a2fd69' #
-          CASE_ISSUED_RESPONDENT_EMAIL: 'd90a4a2d-1406-48d3-a319-924cc8f67d5e' #
-          CASE_LINKED_EMAIL: '14633cea-db23-4a44-a477-3f3b37202b72' #
+          APPLICATION_RECEIVED: '48ccf890-0550-48ca-8c52-fa68cec09947'
+          APPLICATION_RECEIVED_CY: '86e6988c-dfc8-43de-8890-e38269ee40d1'
+          CASE_ISSUED_CITIZEN_EMAIL: '03a0bbaa-10ee-4304-a1b1-6fdf76a2fd69'
+          CASE_ISSUED_RESPONDENT_EMAIL: 'd90a4a2d-1406-48d3-a319-924cc8f67d5e'
+          CASE_LINKED_EMAIL: '14633cea-db23-4a44-a477-3f3b37202b72'
           CASE_STAYED_EMAIL: '474266c4-f583-43b6-b464-3faad6567037'#
-          CASE_UNLINKED_EMAIL: '950c25ec-f70b-4279-b6ab-1231ccfed74e' #
-          CASE_UNSTAYED_EMAIL: '8bd8996a-51ec-4601-ae06-f9fdf38def97' #
-          CASE_WITHDRAWN_EMAIL: '9b2df887-745d-49d6-ac98-02a081e642e1' #
-          CONTACT_PARTIES_EMAIL: '1117ab2d-34d9-46d3-af7e-efcc380408c0' #
-          DECISION_ISSUED_EMAIL: '968c589d-f375-4a42-8c6f-3a7fb70f69de' #
-          FINAL_DECISION_ISSUED_EMAIL: '9e0a6a4f-96a0-4dbb-b6bd-ca31ee9b63b9' #
-          HEARING_CANCELLED_EMAIL: '8e8bcf9f-aa29-4154-8030-c796429a29b6' #
+          CASE_UNLINKED_EMAIL: '950c25ec-f70b-4279-b6ab-1231ccfed74e'
+          CASE_UNSTAYED_EMAIL: '8bd8996a-51ec-4601-ae06-f9fdf38def97'
+          CASE_WITHDRAWN_EMAIL: '9b2df887-745d-49d6-ac98-02a081e642e1'
+          CONTACT_PARTIES_EMAIL: '1117ab2d-34d9-46d3-af7e-efcc380408c0'
+          DECISION_ISSUED_EMAIL: '968c589d-f375-4a42-8c6f-3a7fb70f69de'
+          FINAL_DECISION_ISSUED_EMAIL: '9e0a6a4f-96a0-4dbb-b6bd-ca31ee9b63b9'
+          HEARING_CANCELLED_EMAIL: '8e8bcf9f-aa29-4154-8030-c796429a29b6'
           HEARING_CREATED_EMAIL: 'de4145f9-6b97-429f-afa2-7ccc50287523'
           HEARING_POSTPONED_EMAIL: '607f1bdc-5276-472d-ae1c-e4e0f6c8d71c'
           HEARING_UPDATED_EMAIL: '96fe38c3-95e1-4db4-8d4d-2723b39c7ef2'
